force-app/main/default/objects/B25__Related_List__c/B25__Related_List__c.object-meta.xml
<CustomObject>
    <description>The Name of the Object should be a relationship name of the Reservation object</description>
    <label>Related List</label>
    <nameField>
        <label>Related List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>