force-app/main/default/objects/B25__Related_List__c/fields/B25__Label__c.field-meta.xml
<CustomField>
    <fullName>B25__Label__c</fullName>
    <description>The custom label of the Related List.</description>
    <inlineHelpText>Le libellé personnalisé de la liste connexe.</inlineHelpText>
    <label>Label</label>
    <length>35</length>
    <type>Text</type>
</CustomField>