force-app/main/default/objects/B25__Related_List__c/fields/B25__Order__c.field-meta.xml
<CustomField>
    <fullName>B25__Order__c</fullName>
    <description>Order in which Related Lists show, ranked from low to high.</description>
    <inlineHelpText>Ordre dans lequel les listes connexes s’affichent, classées de bas en haut.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>