force-app/main/default/objects/B25__Related_List__c/fields/B25__Order_Records_By__c.field-meta.xml
<CustomField>
    <fullName>B25__Order_Records_By__c</fullName>
    <description>Order records in the Related List by this field. (comma separate multiple fields)</description>
    <inlineHelpText>Trier les enregistrements de la liste connexe en fonction de ce champ. (champs multiples séparés par des virgules)</inlineHelpText>
    <label>Order Records By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>