force-app/main/default/objects/B25__Related_List__c/fields/B25__Record_Limit__c.field-meta.xml
<CustomField>
    <fullName>B25__Record_Limit__c</fullName>
    <defaultValue>20</defaultValue>
    <description>The limit of records you want to show on the Hover detail.</description>
    <inlineHelpText>La limite des enregistrements que vous voulez afficher sur le détail du survol.</inlineHelpText>
    <label>Record Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>