force-app/main/default/objects/B25__Related_List__c/fields/B25__Reservation_Display__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Display__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Hover Definition this Related List record will be shown on.</description>
    <inlineHelpText>La définition de survol sur laquelle cet enregistrement de liste connexe sera affiché.</inlineHelpText>
    <label>Hover Definition</label>
    <referenceTo>B25__Reservation_Display__c</referenceTo>
    <relationshipLabel>Related Lists</relationshipLabel>
    <relationshipName>Related_Lists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>